hair doesn't render in workbench but does with openGL #61526

Closed
opened 2019-02-14 05:40:09 +01:00 by Jonathan Mafi · 5 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken:
2.80, 957b4547ae, blender2.8, 2019-01-28 22:11

Short description of error
Rendering hair in workbench doesn't work if using standard Render Animation -- bpy.ops.render.render()
spaz_render.png
However when clicking the Display Render View in viewport and setting view>viewport animation -- bpy.ops.render.opengl() -- it works.
good_render.png
I'm guessing these are different in that a separate operator is used? however the results are so similar i assume they are using the same engine?.

Exact steps for others to reproduce the error
Use the file attached.
test_hair_workbench_renders.blend

OR

  1. Create new file and create a sphere then animate it.
  2. Add hair to it, turn dynamics on and cache
  3. Render Ctrl+F12 -> review result
  4. Render openGL -> review result and make comparison
**System Information** Operating system: Graphics card: **Blender Version** Broken: 2.80, 957b4547aeeb, blender2.8, 2019-01-28 22:11 **Short description of error** Rendering hair in workbench doesn't work if using standard Render Animation -- bpy.ops.render.render() ![spaz_render.png](https://archive.blender.org/developer/F6605573/spaz_render.png) However when clicking the Display Render View in viewport and setting view>viewport animation -- bpy.ops.render.opengl() -- it works. ![good_render.png](https://archive.blender.org/developer/F6605569/good_render.png) I'm guessing these are different in that a separate operator is used? however the results are so similar i assume they are using the same engine?. **Exact steps for others to reproduce the error** Use the file attached. [test_hair_workbench_renders.blend](https://archive.blender.org/developer/F6605686/test_hair_workbench_renders.blend) OR 1. Create new file and create a sphere then animate it. 2. Add hair to it, turn dynamics on and cache 3. Render Ctrl+F12 -> review result 4. Render openGL -> review result and make comparison
Author

Added subscriber: @JonathanMafi

Added subscriber: @JonathanMafi

#61859 was marked as duplicate of this issue

#61859 was marked as duplicate of this issue
Clément Foucault was assigned by Sebastian Parborg 2019-02-14 11:12:20 +01:00

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

This issue was referenced by d438120fe3

This issue was referenced by d438120fe3ff564d8b3184aca82060f76b4829c0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61526
No description provided.