Fix T61526 hair doesn't render in workbench but does with openGL